fixed overflow on apartment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16830,13 +16830,7 @@ a.text-dark:focus {
 }
 
 .apartments {
-  width: 90%;
-  max-height: 70vh;
   overflow-x: auto;
-}
-
-.apartments .apartment {
-  height: 100%;
 }
 
 .heroSearch {
