--- a/resources/sass/_home.scss
+++ b/resources/sass/_home.scss
@@ -1,10 +1,9 @@
 .apartments {
-    width: 90%;
-    max-height: 70vh;
     overflow-x: auto;
-    & .apartment {
-        height: 100%;
-    }
+    // white-space: nowrap;
+    // & .apartment {
+    //     height: 100%;
+    // }
 }
 
 .heroSearch {
